plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '4.0.3'
}

group 'support.kajstech.kajbot'
version '1.0-SNAPSHOT'
mainClassName = 'support.kajstech.kajbot.Main'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
	compile('org.slf4j:slf4j-log4j12:1.8.0-beta2')
	compile('org.apache.logging.log4j:log4j-api:2.11.1')
    compile('org.reflections:reflections:0.9.11')
    compile('net.dv8tion:JDA:3.8.1_450')
    compile('com.jagrosh:jda-utilities-command:2.1.5')

}